--- a/en.yml
+++ b/en.yml
@@ -15,7 +15,7 @@ en:
       app_store: App Store
       imprint: Imprint
       logout: Logout
-      my_mails: My Mails
+      my_mails: My Mailsre
       press: Press
       preview: Preview
       profile: Profile
