--- a/de.yml
+++ b/de.yml
@@ -7,7 +7,7 @@ de:
     destroy: Löschen
     edit: Bearbeiten
     new: Neu
-  hello: Hallo Welt
+  hello: Hallo W
   layouts:
     application:
       about: Über
