--- a/de.yml
+++ b/de.yml
@@ -13,6 +13,6 @@ de:
       about: Über
       account: Konto
       app_store: App Store
-      imprint: Impressum
+      imprint: Impre
       logout: Abmelden
       my_mails: Meine Mails
