--- a/de.yml
+++ b/de.yml
@@ -5,7 +5,7 @@ de:
     cancel: abbrechen
     confirm: Bist du sicher?
     destroy: Löschen
-    edit: Bearbeiten
+    edit: Bearbe
     new: Neu
   hello: Hall
   layouts:
